CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(unet)

OPTION(PRINT_TIME "whether to print time" OFF)
OPTION(WITH_DEBUG "whether to build with debug" OFF)
OPTION(USE_CPP11 "whether to usr c++11" ON)
OPTION(BUILD_SAMPLE "whether to build sample" ON)
OPTION(BUILD_LIBRARY "whether to build library" ON)  
OPTION(BUILD_SERVER_MUTILSERVER "whether to build mutilServer" ON)
OPTION(BUILD_CLIENT_ASYNCCLISNT "whether to build asyncClient" ON)

if(PRINT_TIME)
    ADD_DEFINITIONS(-DPRINT_TIME)
    MESSAGE(STATUS "YOU SELECT PRINT TIME!")
ELSE()
    MESSAGE(STATUC "YOU NOT SELECT PRINT TIME!")
ENDIF()

SET(MAC NO)
SET(LINUX NO)
if(CMAKE_HOST_SYSTEM_NAME MATCHES Linux)
    SET(LINUX YES)
    MESSAGE(STATUS "OS:LINUX ${LINUX}")
ELSEIF(CMAKE_HOST_SYSTEM_NAME MATCHES Mac)
    SET(MAC YES)
    MESSAGE(STATUS "OS:MAC ${MAC}")
ELSE()
    MESSAGE(FATAL_ERROR "NOT SUPPORT THIS PLATFORM")
ENDIF()

IF(WITH_DEBUG)
    IF(CMAKE_HOST_SYSTEM_NAME MATCHES Linux)
        SET(CXX_COMPLIER_FLAG "-g -Wall")
        MESSAGE(STATUS "YOU COMPLIE THE CODE WITH DEBUG!")
    ELSEIF(CMAKE_HOST_SYSTEM_NAME MATCHES MaC)
        MESSAGE(STATUS "YOU COMPLIE THE CODE WITH DEBUG!")
    ENDIF()
ELSEIF()
    MESSAGE(STATUS "YOU COMPLIE THE CODE WITHOUT DEBUG!")
ENDIF()




